Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,13 +7,10 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    chmod +x docker-build.sh
+    ./docker-build.sh "$(DOCKER_PASSWORD)" "$(DOCKER_USERNAME)" "$(DOCKER_ACCOUNT)"
+  displayName: 'Permisos y ejecutar docker-build.sh'
