--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: carritoOTel-argo
+  name: carritotel-argo
   namespace: argocd
 spec:
   project: default
