--- a/microservice-kubernetes-demo-customer/Dockerfile
+++ b/microservice-kubernetes-demo-customer/Dockerfile
@@ -14,8 +14,8 @@ CMD ["/usr/bin/java", "-Xmx400m", "-Xms400m", \
   "-Dotel.traces.exporter=otlp", \
   "-Dotel.metrics.exporter=otlp", \
   "-Dotel.logs.exporter=otlp", \
-  "-Dotel.exporter.otlp.endpoint=https://c3b8fc46b53644bd9a34a844b2473cf1.apm.eastus2.azure.elastic-cloud.com:443", \
-  "-Dotel.exporter.otlp.headers=Authorization=Bearer uYOVqj6gdRfYmuvvt1", \
+  "-Dotel.exporter.otlp.endpoint=https://4b7bb8b2c33747a2bd0d13d1880435b3.apm.eastus2.azure.elastic-cloud.com:443", \
+  "-Dotel.exporter.otlp.headers=Authorization=Bearer 0FDBagJo9P7xMGxR5M", \
   "-Dotel.resource.attributes=service.name=shopcustomer,service.version=1.0,deployment.environment=Otel", \
   "-jar", "/app/microservice-kubernetes-demo-customer-0.0.1-SNAPSHOT.jar"]
 
