--- a/microservice-kubernetes-demo-catalog/Dockerfile
+++ b/microservice-kubernetes-demo-catalog/Dockerfile
@@ -14,8 +14,8 @@ CMD ["/usr/bin/java", "-Xmx400m", "-Xms400m", \
   "-Dotel.traces.exporter=otlp", \
   "-Dotel.metrics.exporter=otlp", \
   "-Dotel.logs.exporter=otlp", \
-  "-Dotel.exporter.otlp.endpoint=https://413f4ec95a5e4e28a316a15873f7ab3a.apm.eastus2.azure.elastic-cloud.com:443", \
-  "-Dotel.exporter.otlp.headers=Authorization=Bearer i3xX65zd3kTBqC988P", \
+  "-Dotel.exporter.otlp.endpoint=https://4b7bb8b2c33747a2bd0d13d1880435b3.apm.eastus2.azure.elastic-cloud.com:443", \
+  "-Dotel.exporter.otlp.headers=Authorization=Bearer 0FDBagJo9P7xMGxR5M", \
   "-Dotel.resource.attributes=service.name=shopcatalog,service.version=1.0,deployment.environment=Otel", \
   "-jar", "/app/microservice-kubernetes-demo-catalog-0.0.1-SNAPSHOT.jar"]
 
