--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         run: apache
     spec:
       containers:
-      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-apache:otel
+      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-apache:otel2
         name: apache
         ports:
         - containerPort: 80
@@ -47,7 +47,7 @@ spec:
         run: catalog
     spec:
       containers:
-      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-catalog:otel
+      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-catalog:otel2
         name: catalog
         ports:
         - containerPort: 8080
@@ -76,7 +76,7 @@ spec:
         run: customer
     spec:
       containers:
-      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-customer:otel
+      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-customer:otel2
         name: customer
         ports:
         - containerPort: 8080
@@ -105,7 +105,7 @@ spec:
         run: order
     spec:
       containers:
-      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-order:otel
+      - image: docker.io/valentingarciairiart/microservice-kubernetes-demo-order:otel2
         name: order
         ports:
         - containerPort: 8080
