--- a/microservice-kubernetes-demo-order/Dockerfile
+++ b/microservice-kubernetes-demo-order/Dockerfile
@@ -14,8 +14,8 @@ CMD ["/usr/bin/java", "-Xmx400m", "-Xms400m", \
   "-Dotel.traces.exporter=otlp", \
   "-Dotel.metrics.exporter=otlp", \
   "-Dotel.logs.exporter=otlp", \
-  "-Dotel.exporter.otlp.endpoint=https://4b7bb8b2c33747a2bd0d13d1880435b3.apm.eastus2.azure.elastic-cloud.com:443", \
-  "-Dotel.exporter.otlp.headers=Authorization=Bearer 0FDBagJo9P7xMGxR5M", \
+  "-Dotel.exporter.otlp.endpoint=https://4bf2d8b6935343b382d790439da65e79.apm.eastus2.azure.elastic-cloud.com:443", \
+  "-Dotel.exporter.otlp.headers=Authorization=Bearer FfiKkJEVZRcu4hYh8o", \
   "-Dotel.resource.attributes=service.name=shoporder,service.version=1.0,deployment.environment=Otel", \
   "-jar", "/app/microservice-kubernetes-demo-order-0.0.1-SNAPSHOT.jar"]
 
